<resources>
    <string name="app_name">"BankTracker "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tools_item">Tools</string>
    <string name="communicate_item">Communicate</string>
    <string name="share_item">Share</string>
    <string name="send_item">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_accounts">Счета</string>
    <string name="transactions">Транзакции</string>
    <string name="view">Обзор</string>
</resources>
