<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_view"
            android:title="@string/view" />
        <item
            android:id="@+id/nav_bank_accounts"
            android:icon="@drawable/ic_bank_accounts"
            android:title="@string/bank_accounts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transactions"
            android:title="@string/transactions" />
    </group>

    <item android:title="@string/communicate_item">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_item" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_item" />
        </menu>
    </item>

</menu>
